--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z"></path></svg>
                         </div>
                         <h3 class="text-xl font-bold mb-2">مكتبة فيديوهات شاملة</h3>
-                        <p class="text-gray-600">شاهد آلاف الفيديوهات المختصرة وسهلة الفهم في كل مواضيع الطب، من التشريح إلى علم الأدوية.</p>
+                        <p class="text-gray-600">شاهد مئات الفيديوهات المختصرة وسهلة الفهم في كل مواضيع الطب، من التشريح إلى علم الأدوية.</p>
                     </div>
                     <!-- Feature 2 -->
                     <div class="bg-white p-8 rounded-lg shadow-lg feature-card transition duration-300 text-center">
@@ -131,7 +131,7 @@
                             <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
                         </div>
                         <h3 class="text-xl font-bold mb-2">اختبارات وملفات معدة بصريا لتساعدك على التذكر والحفظ</h3>
-                        <p class="text-gray-600">عزز تعلمك بأسئلة تدريبية وبطاقات مراجعة بنظام التكرار المتباعد مصممة خصيصًا لما شاهدته للتو.</p>
+                        <p class="text-gray-600">عزز تعلمك بأسئلة تدريبية وبطاقات بنظام التبسيط مصممة خصيصًا لما شاهدته للتو.</p>
                     </div>
                     <!-- Feature 3 -->
                     <div class="bg-white p-8 rounded-lg shadow-lg feature-card transition duration-300 text-center">
@@ -256,47 +256,8 @@
             </div>
         </section>
 
-        <!-- Testimonials Section -->
-        <section id="testimonials" class="bg-white py-20">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center mb-12">موثوق به من قبل الطلاب حول العالم</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Testimonial 1 -->
-                    <div class="bg-white p-8 rounded-lg shadow-lg">
-                        <p class="text-gray-600 mb-4">"اكاديمية هكرناها غيرت طريقتي في الدراسة تمامًا. الفيديوهات رائعة، والاختبارات ساعدتني في التفوق في امتحاناتي. أنصح بها بشدة!"</p>
-                        <div class="flex items-center">
-                            <img class="w-12 h-12 rounded-full ml-4" src="https://placehold.co/100x100/667eea/ffffff?text=ع" alt="Avatar">
-                            <div>
-                                <p class="font-bold">عائشة أحمد</p>
-                                <p class="text-sm text-gray-500">طالبة طب، سنة ثالثة</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Testimonial 2 -->
-                    <div class="bg-white p-8 rounded-lg shadow-lg">
-                        <p class="text-gray-600 mb-4">"خطة الدراسة المخصصة غيرت كل شيء. لقد جعلتني منظمًا ومركزًا على ما أحتاج إلى تعلمه. شكرًا اكاديمية هكرناها!"</p>
-                        <div class="flex items-center">
-                            <img class="w-12 h-12 rounded-full ml-4" src="https://placehold.co/100x100/764ba2/ffffff?text=م" alt="Avatar">
-                            <div>
-                                <p class="font-bold">محمد خان</p>
-                                <p class="text-sm text-gray-500">طالب طب، سنة ثانية</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Testimonial 3 -->
-                    <div class="bg-white p-8 rounded-lg shadow-lg">
-                        <p class="text-gray-600 mb-4">"أخيرًا فهمت المواضيع المعقدة التي عانيت منها لشهور. الشروحات المرئية تصنع كل الفارق."</p>
-                        <div class="flex items-center">
-                            <img class="w-12 h-12 rounded-full ml-4" src="https://placehold.co/100x100/4a5568/ffffff?text=ف" alt="Avatar">
-                            <div>
-                                <p class="font-bold">فاطمة الجميل</p>
-                                <p class="text-sm text-gray-500">طالبة طب، سنة رابعة</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+       
+      
     </main>
 
     <!-- Footer -->
@@ -435,3 +396,4 @@
 
 </body>
 </html>
+
