--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <div class="mobile-mockup">
                             <div class="notch"></div>
                             <div class="screen">
-                                <img src="https://placehold.co/270x570/667eea/ffffff?text=محتوى+تعليمي" alt="محتوى تعليمي" class="w-full h-full object-cover">
+                                <img src="https://i.postimg.cc/B6cd4TSg/pharma.png" alt="محتوى تعليمي" class="w-full h-full object-cover">
                             </div>
                         </div>
                     </div>
@@ -431,3 +431,4 @@
 
 </body>
 </html>
+
