--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col lg:flex-row items-center gap-12">
                     <div class="lg:w-1/2">
-                        <img src="https://placehold.co/600x400/667eea/ffffff?text=فريقنا" alt="فريق اكاديمية هكرناها" class="rounded-lg shadow-xl">
+                        <img src="https://i.postimg.cc/B6cd4TSg/pharma.png" alt="فريق اكاديمية هكرناها" class="rounded-lg shadow-xl">
                     </div>
                     <div class="lg:w-1/2 text-center lg:text-right">
                         <h2 class="text-3xl font-bold mb-4">عن اكاديمية هكرناها</h2>
@@ -431,4 +431,5 @@
 
 </body>
 </html>
+
 
