--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <div class="mobile-mockup">
                             <div class="notch"></div>
                             <div class="screen">
-                                <img src="https://i.postimg.cc/B6cd4TSg/pharma.png" alt="محتوى تعليمي" class="w-full h-full object-cover">
+                                <img src="https://i.imghippo.com/files/XWyr6365Ok.jpeg" alt="محتوى تعليمي" class="w-full h-full object-cover">
                             </div>
                         </div>
                     </div>
@@ -431,6 +431,7 @@
 
 </body>
 </html>
+
 
 
 
